fix : поменял z-index у оверлея квиза

--- a/src/components/Quiz/Quiz.css
+++ b/src/components/Quiz/Quiz.css
@@ -8,7 +8,7 @@
   left: 0;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 5;
 }
 
 .quiz {
